# osavr

./: README.md
Assets/: testscene.unity
Assets/AutoSave/: AutoSave_00.unity  AutoSave_01.unity  AutoSave_02.unity  AutoSave_03.unity  AutoSave_04.unity  AutoSave_05.unity  AutoSave_06.unity  AutoSave_07.unity  AutoSave_08.unity  AutoSave_09.unity
Assets/HDRPDefaultResources/: DefaultSettingsVolumeProfile.asset  HDRenderPipelineAsset.asset  Sky and Fog Settings Profile.asset
Assets/Osa/: Insides Volume Profile.asset  New Material.mat  New Shader Graph.shadergraph  osa.blend  osa.blend1
Assets/OsaVR/Input/: MouseController.cs
Assets/OsaVR/InputControllers/: KeyboardInputController.cs  MouseController.cs
Assets/OsaVR/Osa/: OsaController.cs  OsaRadioController.cs  RadarCameraProcessingController.cs  (+2 more)
Assets/Playground/: PropertyBlockTestScript.cs  plane_surf_mat.mat  radar_return_shader.shadergraph  rtextest.renderTexture  rtextest2.asset  test_mat.mat  test_shader.hlsl
Assets/Scenes/: NewLayer.terrainlayer  terrain_data.asset  terrain_mat.mat  testscene.unity
Assets/Scripts/: TestPass.cs
Assets/testscene/: Insides Volume Profile.asset
Plugins/radarimg_proc/: CMakeLists.txt  library.c  library.h  soc_radar.c  soc_radar.h  ssc_radar.c  ssc_radar.h  test_application.c  test_application.h
ProjectSettings/: EditorSettings.asset  GraphicsSettings.asset  HDRPProjectSettings.asset  ProjectSettings.asset  TagManager.asset
References/: L2.psd  dimensions.md  panel_tex.psd  tech.md
native_plugin/: CMakeLists.txt  library.c  library.h
(+230 files in other folders)
